Codebase initialization
Frontend component skeleton
Backend MVC modules started
Mainpage, routings added

SPRINT-1 ENDED

Vehicle Data Model implemented
User Data Model implemented
Vehicle Pages developed
Unit tests added to CI/CD pipeline

SPRINT-2 ENDED

Register page implemented
Login page implemented
Profile page implemented
User service endpoints implemented
Unit tests added to CI/CD pipeline

SPRINT-3 ENDED