@@ -19,3 +19,10 @@ User service endpoints implemented
 Unit tests added to CI/CD pipeline
 
 SPRINT-3 ENDED
+
+Reservation page implemented
+MyReservation page implemented
+Reservation service endpoints implemented
+Unit tests added to CI/CD pipeline
+
+SPRINT-4 ENDED
